--- a/index.html
+++ b/index.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="./script.js" defer></script>
-    <title>Cadastro API</title>
+    <title>Controle Financeiro</title>
 </head>
 <body>
     <div class="box">
-        <h1>Cadastro</h1>
         <form action="">
-            <input type="text" class="firstName" name="firstName" placeholder="Nome">
-            <input type="text" class="lastName" name="lastName" placeholder="Sobrenome">
-            <input type="text" class="cpf" name="cpf" placeholder="CPF">
-            <input type="password" class="senha" name="senha" placeholder="Senha">
-            <input type="text" class="email" name="email" placeholder="Email">
-            <input type="text" class="modeloCelular" name="modeloCelular" placeholder="Modelo de Celular">
-            <button>Cadastrar</button>
+            <div>
+                <button type="button" onclick="register()">Registrar</button>
+            </div>
+            <div>
+                <button type="button" onclick="newTransaction()">Nova Transação</button>
+            </div>
         </form>
+
     </div>
     
 </body>
+
+<link rel="stylesheet" href="style.css">
+<script src="./script.js" defer></script>
+
 </html>
