--- a/semfinalizar/index.html
+++ b/semfinalizar/index.html
@@ -22,5 +22,6 @@
 
 <link rel="stylesheet" href="style.css">
 <script src="./script.js" defer></script>
+<script src="pages/transaction/transaction.js" defer></script>
 
 </html>
