Local Storage e cookies para autenticação

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
         </div>       
     </div>
 
-    <script src="login.js"></script>
+    <script src="cookie.js"></script>
     
 </body>
 </html>
