--- a/transaction.html
+++ b/transaction.html
@@ -10,7 +10,7 @@
 
     <h2>Criar Novo Item</h2>
     <form id="createForm">
-        <input type="number" class="transaction" name="transaction" placeholder="Valor">
+        <input type="number" class="valor" name="valor" placeholder="Valor">
         <input type="text" class="type" name="type" placeholder="Tipo de gasto">
         <input type="text" class="description" name="description" placeholder="Descrição">
         <input type="number" min="0" class="userId" name="userId" placeholder="Id do Usuário">
