Criação de estilos css e página de login e cadastro

--- a/home.html
+++ b/home.html
@@ -26,17 +26,26 @@
                 </div>
                 <button class="btn-login">Login</button>
                 </form>
+
+                <p id="message" class="error"></p>
+
                 <p class="para">
                     Não tem uma conta?
                     <a class="atri" href="register.html">
                       Cadastre-se
                     </a>
                 </p>
+                
             </div>
+
+            <div id="logoutDiv" style="display: none;">
+                <button id="logoutBtn">Sair</button>
+            </div>
+
         </div>       
     </div>
 
-    <script src="cookie.js"></script>
+    <script src="login.js"></script>
     
 </body>
 </html>
