--- a/transaction.html
+++ b/transaction.html
@@ -13,20 +13,48 @@
     </header>
     <main>
         <section class="actions">
-            <button id="create-item">Criar Novo Item</button>
+            <button id="create-item">Adicionar Gasto</button>
         </section>
 
         <section class="item-management">
 
-            <h2>Criar Novo Item</h2>
-            <form id="createForm">
-                <input type="text" class="valor" name="valor" placeholder="Valor">
-                <input type="text" class="type" name="type" placeholder="Tipo de gasto">
-                <input type="text" class="description" name="description" placeholder="Descrição">
-                <button type="submit">Criar</button>
-            </form>
-
+            <div id="createItemModal" class="modal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2>Criar Novo Item</h2>
+                    <form id="createForm">
+                        <input type="text" class="valor" name="valor" placeholder="Valor">
+                        <input type="text" class="type" name="type" placeholder="Tipo de gasto">
+                        <input type="text" class="description" name="description" placeholder="Descrição">
+                        <button type="submit">Criar</button>
+                    </form>
+                </div>
+            </div>
+            
             <h2>Lista de Itens</h2>
+
+            <label for="filterType">Filtrar por Tipo de Gasto:</label>
+            <select id="filterType">
+                <option value="">Todos</option>
+            </select>
+
+            <label for="filterMonth">Filtrar por Mês:</label>
+            <select id="filterMonth">
+                <option value="">Todos</option>
+                <option value="janeiro">Janeiro</option>
+                <option value="fevereiro">Fevereiro</option>
+                <option value="março">Março</option>
+                <option value="abril">Abril</option>
+                <option value="maio">Maio</option>
+                <option value="junho">Junho</option>
+                <option value="julho">Julho</option>
+                <option value="agosto">Agosto</option>
+                <option value="setembro">Setembro</option>
+                <option value="outubro">Outubro</option>
+                <option value="novembro">Novembro</option>
+                <option value="dezembro">Dezembro</option>
+            </select>
+
             <ul id="itemList"></ul>
 
             <h2>Atualizar Item</h2>
