--- a/gasto.html
+++ b/gasto.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD de Gastos</title>
+    <title>MeuGestor - Gastos</title>
     <link rel="stylesheet" href="gasto.css">
 </head>
 <body>
 
     <header>
-        <h1>Página de Gastos</h1>
-        <a href="transaction.html">Transações</a>
-        <a href="totalGasto.html">Relatório de Gastos</a>
-        <a href="planejamento.html">Planejamento</a>
+        <div class="gif-container">
+            <img src="calendario2.png" alt="GIF animado">
+        </div>
+        <div class="header-content">
+            <h1>Página de Gastos</h1>
+            <a href="transaction.html">Transações</a>
+            <a href="totalGasto.html">Relatório de Gastos</a>
+            <a href="planejamento.html">Planejamento</a>
+            <a href="configuracao.html">Configurações</a>
+        </div>
     </header>
     <main>
         <section class="actions">
@@ -33,7 +39,7 @@
                 </div>
             </div>
 
-            <h2>Tabela de Topos de Gastos</h2>
+            <h2>Tabela de Tipos de Gastos</h2>
 
             <div class="button-container">
                 <button id="selectAll">Selecionar Todos</button>
