--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="register.css">
-    <title>Cadastrar</title>
+    <title>MeuGestor - Cadastrar</title>
 </head>
 <body>
     <div class="main-login">
@@ -16,6 +16,7 @@
                 <input type="text" class="lastName" name="lastName" placeholder="Sobrenome">
                 <input type="text" class="cpf" name="cpf" placeholder="CPF">
                 <input type="password" class="senha" name="senha" placeholder="Senha">
+                <input type="password" class="confirmSenha" name="confirmSenha" placeholder="Confirme a senha">
                 <input type="text" class="email" name="email" placeholder="Email">
                 <button type="submit" class="btn-login">Criar</button>
             </form>
