--- a/totalGasto.html
+++ b/totalGasto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relatório de Gastos</title>
+    <title>MeuGestor - Relatório de Gastos</title>
     <link rel="stylesheet" href="totalGasto.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
@@ -11,10 +11,16 @@
 <body>
 
     <header>
-        <h1>Relatório de Gastos</h1>
-        <a href="gasto.html">Tipo de gasto</a>
-        <a href="planejamento.html">Planejamento</a>
-        <a href="transaction.html">Transações</a>
+        <div class="gif-container">
+            <img src="calendario2.png" alt="GIF animado">
+        </div>
+        <div class="header-content">
+            <h1>Relatório de Gastos</h1>
+            <a href="gasto.html">Tipo de gasto</a>
+            <a href="planejamento.html">Planejamento</a>
+            <a href="transaction.html">Transações</a>
+            <a href="configuracao.html">Configurações</a>
+        </div>
     </header>
     <main>
 
