--- a/transaction.html
+++ b/transaction.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRUD de Transações</title>
+    <title>MeuGestor - Transações</title>
     <link rel="stylesheet" href="transaction.css">
 </head>
 <body>
 
     <header>
-        <h1>Página de Transação</h1>
-        <a href="gasto.html">Tipo de gasto</a>
-        <a href="totalGasto.html">Relatório de Gastos</a>
-        <a href="planejamento.html">Planejamento</a>
+        <div class="gif-container">
+            <img src="calendario2.png" alt="GIF animado">
+        </div>
+        <div class="header-content">
+            <h1>Página de Transação</h1>
+            <a href="gasto.html">Tipo de gasto</a>
+            <a href="totalGasto.html">Relatório de Gastos</a>
+            <a href="planejamento.html">Planejamento</a>
+            <a href="configuracao.html">Configurações</a>
+        </div>
     </header>
     <main>
         <section class="actions">
@@ -37,6 +43,10 @@
                         <label for="typeId">Mês:</label>
                         <select class="mes" name="mes" id="mes">
                             <option value="" disabled selected>Selecione o mês</option>
+                        </select>
+                        <label for="typeId">Dia:</label>
+                        <select class="dia" name="dia" id="dia">
+                            <option value="" disabled selected>Selecione o dia</option>
                         </select>
                         <label for="typeId">Ano:</label>
                         <select class="ano" name="ano" id="ano">
@@ -101,7 +111,11 @@
                 <input type="text" class="description" id="description" placeholder="Descrição">
                 <label for="typeId">Mês:</label>
                 <select class="mes" name="mes" id="mesUpdate">
-                <option value="" disabled selected>Selecione o mês</option>
+                     <option value="" disabled selected>Selecione o mês</option>
+                </select>
+                <label for="typeId">Dia:</label>
+                <select class="dia" name="dia" id="diaUpdate">
+                    <option value="" disabled selected>Selecione o dia</option>
                 </select>
                 <label for="typeId">Ano:</label>
                 <select class="ano" name="ano" id="anoUpdate">
