Adição de logo no projeto

--- a/planejamento.html
+++ b/planejamento.html
@@ -11,6 +11,7 @@
     <header>
         <div class="gif-container">
             <img src="calendario2.png" alt="GIF animado">
+            <p class="brand-name">MeuGestor</p>
         </div>
         <div class="header-content">
             <h1>Página de Planejamento</h1>
