--- a/totalGasto.html
+++ b/totalGasto.html
@@ -13,6 +13,7 @@
     <header>
         <div class="gif-container">
             <img src="calendario2.png" alt="GIF animado">
+            <p class="brand-name">MeuGestor</p>
         </div>
         <div class="header-content">
             <h1>Relatório de Gastos</h1>
