correções de bugs e mudança de nome de páginas

--- a/gasto.html
+++ b/gasto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MeuGestor - Gastos</title>
+    <title>MeuGestor - Tipos de Gastos</title>
     <link rel="stylesheet" href="gasto.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <p class="brand-name">MeuGestor</p>
         </div>
         <div class="header-content">
-            <h1>Página de Gastos</h1>
+            <h1>Página de Tipos de Gastos</h1>
             <a href="transaction.html">Transações</a>
             <a href="totalGasto.html">Relatório de Gastos</a>
             <a href="planejamento.html">Planejamento</a>
