--- a/totalGasto.html
+++ b/totalGasto.html
@@ -17,7 +17,7 @@
         </div>
         <div class="header-content">
             <h1>Relatório de Gastos</h1>
-            <a href="gasto.html">Tipo de gasto</a>
+            <a href="gasto.html">Tipos de Gastos</a>
             <a href="planejamento.html">Planejamento</a>
             <a href="transaction.html">Transações</a>
             <a href="configuracao.html">Configurações</a>
@@ -59,8 +59,8 @@
                 <thead>
                     <tr>
                         <th>Tipo de Gasto</th>
-                        <th>Total</th>
-                        <th>Planejamento</th>
+                        <th>Gastos</th>
+                        <th>Planejamentos</th>
                     </tr>
                 </thead>
                 <tbody>
