--- a/transaction.html
+++ b/transaction.html
@@ -14,7 +14,7 @@
         </div>
         <div class="header-content">
             <h1>Página de Transação</h1>
-            <a href="gasto.html">Tipo de gasto</a>
+            <a href="gasto.html">Tipos de Gastos</a>
             <a href="totalGasto.html">Relatório de Gastos</a>
             <a href="planejamento.html">Planejamento</a>
             <a href="configuracao.html">Configurações</a>
