--- a/configuracao.html
+++ b/configuracao.html
@@ -15,7 +15,7 @@
         </div>
         <div class="header-content">
             <h1>Configurações</h1>
-            <a href="gasto.html">Tipo de gasto</a>
+            <a href="gasto.html">Tipos de Gastos</a>
             <a href="totalGasto.html">Relatório de Gastos</a>
             <a href="planejamento.html">Planejamento</a>
             <a href="transaction.html">Transações</a>
