--- a/planejamento.html
+++ b/planejamento.html
@@ -15,7 +15,7 @@
         </div>
         <div class="header-content">
             <h1>Página de Planejamento</h1>
-            <a href="gasto.html">Tipo de gasto</a>
+            <a href="gasto.html">Tipos de Gastos</a>
             <a href="totalGasto.html">Relatório de Gastos</a>
             <a href="transaction.html">Transações</a>
             <a href="configuracao.html">Configurações</a>
